--- a/flexi_meetup.html
+++ b/flexi_meetup.html
@@ -18,24 +18,13 @@
 		<!-- Add jQuery library -->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 
-		<!-- Add mousewheel plugin (this is optional) -->
-		<script type="text/javascript" src="fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
-
-		<!-- Add fancyBox -->
-		<link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
-		<script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
-
-		<!-- Optionally add helpers - button, thumbnail and/or media -->
-		<link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
-		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
-		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
-
-		<link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
-		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.js"></script>
 
 		<link rel="stylesheet" href="style/fancybox_styling.css"/>
 
-        <script type="text/javascript" src="js/menu_utils.js"></script>
+		<script type="text/javascript" src="js/global.js"></script>
+		<script type="text/javascript" src="js/menu_utils.js"></script>
 
 		<!-- Hotjar Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
 		<script>
@@ -65,28 +54,11 @@
         </script>
 
 		<script type="text/javascript">
-			$(document).ready(function() {
-				console.log( "ready!" );
-				$(".fancybox").fancybox({
-					helpers : {
-						title: {
-							type: 'outside',
-							position: 'bottom'
-						},
-						overlay : {
-							css : {
-								'background' : 'rgba(70, 70, 70, 0.90)'
-							}
-						}
-					},
-					nextEffect: 'fade',
-					prevEffect: 'fade',
-					padding : 0,
-					margin : [20, 60, 20, 60] // Increase left/right margin
-				});
-			});
+            $(document).ready(function() {
+                //apply fancybox options
+                $("[data-fancybox]").fancybox(fancyboxOptions);
 
-            $(document).ready(function () {
+                //init navigation framework
                 $("#top_menu").load("top_menu.html", initTopMenuActions);
                 $("#side_menu").load("side_menu.html");
             });
@@ -117,7 +89,11 @@
 					The storyboards above describe the interaction between an event host and one of it’s guests.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/fleximeetup/storyboards%20together.png"><img class="gallery1" id="function_candidates_1" src="img/fleximeetup/storyboards%20together.png" alt="" /></a>
+					<a data-fancybox="storyboards"
+					   data-caption="Original version with unsorted list of suggestions"
+					   href="img/fleximeetup/storyboards%20together.png">
+						<img class="gallery1" src="img/fleximeetup/storyboards%20together.png"/>
+					</a>
 				</div>
 
 				<h2>PAPER MOCKUPS AND EARLY USER TESTING</h2>
@@ -126,7 +102,11 @@
 					value when it comes to obtaining quick feedback.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/fleximeetup/sketches.png"><img class="gallery1" id="function_candidates_1" src="img/fleximeetup/sketches.png" alt="" /></a>
+					<a data-fancybox="sketches"
+					   data-caption="Original version with unsorted list of suggestions"
+					   href="img/fleximeetup/sketches.png">
+						<img class="gallery1" src="img/fleximeetup/sketches.png"/>
+					</a>
 				</div>
 
 				<p>After sketching a few screens from the most important user flow of the solution, I started testing it
@@ -147,7 +127,11 @@
 					model of the application.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/fleximeetup/second%20balsamiq.png"><img class="gallery1" id="function_candidates_1" src="img/fleximeetup/second%20balsamiq.png" alt="" /></a>
+					<a data-fancybox="mockups"
+					   data-caption="Original version with unsorted list of suggestions"
+					   href="img/fleximeetup/second%20balsamiq.png">
+						<img class="gallery1" src="img/fleximeetup/second%20balsamiq.png"/>
+					</a>
 				</div>
 
 
@@ -169,13 +153,33 @@
 					familiar with Google’s guidelines, I chose to use Material Design for the visuals.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="sadfasdf" href="img/fleximeetup/1.splash.png"><img class="gallery3 left_image " id="function_candidates_1" src="img/fleximeetup/1.splash.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="sadfasdf" href="img/fleximeetup/2.homescreen.png"><img class="gallery3 center_image " id="function_candidates_1" src="img/fleximeetup/2.homescreen.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="sadfasdf" href="img/fleximeetup/3.new%20event%201.png"><img class="gallery3 right_image " id="function_candidates_1" src="img/fleximeetup/3.new%20event%201.png" alt="" /></a>
+					<a data-fancybox="mobile"
+					   data-caption="sadfasdf" href="img/fleximeetup/1.splash.png">
+						<img class="gallery3 left_image" src="img/fleximeetup/1.splash.png"/>
+					</a>
+					<a data-fancybox="mobile"
+					   data-caption="sadfasdf" href="img/fleximeetup/2.homescreen.png">
+						<img class="gallery3 center_image" src="img/fleximeetup/2.homescreen.png"/>
+					</a>
+					<a data-fancybox="mobile"
+					   data-caption="sadfasdf" href="img/fleximeetup/3.new%20event%201.png">
+						<img class="gallery3 right_image" src="img/fleximeetup/3.new%20event%201.png"/>
+					</a>
+
 					<div class="gallery_separator"></div>
-					<a class="fancybox" rel="group" title="sadfasdf" href="img/fleximeetup/4.new%20event%202%201.png"><img class="gallery3 left_image " id="function_candidates_1" src="img/fleximeetup/4.new%20event%202%201.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="sadfasdf" href="img/fleximeetup/5.new%20event%202%202.png"><img class="gallery3 center_image " id="function_candidates_1" src="img/fleximeetup/5.new%20event%202%202.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="sadfasdf" href="img/fleximeetup/6.new%20event%203.png"><img class="gallery3 right_image " id="function_candidates_1" src="img/fleximeetup/6.new%20event%203.png" alt="" /></a>
+
+					<a data-fancybox="mobile"
+					   data-caption="sadfasdf" href="img/fleximeetup/4.new%20event%202%201.png">
+						<img class="gallery3 left_image" src="img/fleximeetup/4.new%20event%202%201.png"/>
+					</a>
+					<a data-fancybox="mobile"
+					   data-caption="sadfasdf" href="img/fleximeetup/5.new%20event%202%202.png">
+						<img class="gallery3 center_image" src="img/fleximeetup/5.new%20event%202%202.png"/>
+					</a>
+					<a data-fancybox="mobile"
+					   data-caption="sadfasdf" href="img/fleximeetup/6.new%20event%203.png">
+						<img class="gallery3 right_image" src="img/fleximeetup/6.new%20event%203.png"/>
+					</a>
 				</div>
 
 				<h2>CONCLUSIONS</h2>
