--- a/isoprofiler.html
+++ b/isoprofiler.html
@@ -18,24 +18,13 @@
 		<!-- Add jQuery library -->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 
-		<!-- Add mousewheel plugin (this is optional) -->
-		<script type="text/javascript" src="fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
-
-		<!-- Add fancyBox -->
-		<link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
-		<script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
-
-		<!-- Optionally add helpers - button, thumbnail and/or media -->
-		<link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
-		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
-		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
-
-		<link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
-		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.js"></script>
 
 		<link rel="stylesheet" href="style/fancybox_styling.css"/>
 
-        <script type="text/javascript" src="js/menu_utils.js"></script>
+		<script type="text/javascript" src="js/global.js"></script>
+		<script type="text/javascript" src="js/menu_utils.js"></script>
 
 		<!-- Hotjar Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
 		<script>
@@ -65,28 +54,11 @@
         </script>
 
 		<script type="text/javascript">
-			$(document).ready(function() {
-				console.log( "ready!" );
-				$(".fancybox").fancybox({
-					helpers : {
-						title: {
-							type: 'outside',
-							position: 'bottom'
-						},
-						overlay : {
-							css : {
-								'background' : 'rgba(70, 70, 70, 0.90)'
-							}
-						}
-					},
-					nextEffect: 'fade',
-					prevEffect: 'fade',
-					padding : 0,
-					margin : [20, 60, 20, 60] // Increase left/right margin
-				});
-			});
+            $(document).ready(function() {
+                //apply fancybox options
+                $("[data-fancybox]").fancybox(fancyboxOptions);
 
-            $(document).ready(function () {
+                //init navigation framework
                 $("#top_menu").load("top_menu.html", initTopMenuActions);
                 $("#side_menu").load("side_menu.html");
             });
@@ -116,7 +88,11 @@
 				knowledge base of manually curated content.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/Screen%20Shot%202016-04-07%20at%204.13.21%20PM.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/Screen%20Shot%202016-04-07%20at%204.13.21%20PM.png" alt="" /></a>
+					<a data-fancybox="original"
+					   data-caption="Original version with unsorted list of suggestions"
+					   href="img/isoprofiler/Screen%20Shot%202016-04-07%20at%204.13.21%20PM.png">
+						<img class="gallery1" src="img/isoprofiler/Screen%20Shot%202016-04-07%20at%204.13.21%20PM.png"/>
+					</a>
 				</div>
 
 				<p>The major issue was the presentation of the results that was done by the way of a huge filterable table with
@@ -151,11 +127,29 @@
 				and experimented with multiple ways of displaying quantitative data.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%201.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%201.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%202.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%202.png" alt="" /></a>
+					<a data-fancybox="ideas" class="needsBorder"
+					   data-caption="Original version with unsorted list of suggestions"
+					   href="img/isoprofiler/A4%204x8%20grid%201.png">
+						<img class="gallery2 left_image with_border" src="img/isoprofiler/A4%204x8%20grid%201.png"/>
+					</a>
+					<a data-fancybox="ideas" class="needsBorder"
+					   data-caption="Original version with unsorted list of suggestions"
+					   href="img/isoprofiler/A4%204x8%20grid%202.png">
+						<img class="gallery2 right_image with_border" src="img/isoprofiler/A4%204x8%20grid%202.png"/>
+					</a>
+
 					<div class="gallery_separator"></div>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%203.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%203.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%204.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%204.png" alt="" /></a>
+
+					<a data-fancybox="ideas" class="needsBorder"
+					   data-caption="Original version with unsorted list of suggestions"
+					   href="img/isoprofiler/A4%204x8%20grid%203.png">
+						<img class="gallery2 left_image with_border" src="img/isoprofiler/A4%204x8%20grid%203.png"/>
+					</a>
+					<a data-fancybox="ideas" class="needsBorder"
+					   data-caption="Original version with unsorted list of suggestions"
+					   href="img/isoprofiler/A4%204x8%20grid%204.png">
+						<img class="gallery2 right_image with_border" src="img/isoprofiler/A4%204x8%20grid%204.png"/>
+					</a>
 				</div>
 
 				<h3>MOLECULES VIEW</h3>
@@ -164,7 +158,11 @@
 					being analyzed side by side. That is the reason why all the following mockups have both single and multiple datasets.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_variations.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/dataset_view_variations.png" alt="" /></a>
+					<a data-fancybox="ideas"
+					   data-caption="Original version with unsorted list of suggestions"
+					   href="img/isoprofiler/dataset_view_variations.png">
+						<img class="gallery1" src="img/isoprofiler/dataset_view_variations.png"/>
+					</a>
 				</div>
 
 				<p>All the above ideas were discussed and ultimately abandoned for various reasons. The version that
@@ -174,7 +172,11 @@
 					experiment conditions.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_4.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/dataset_view_4.png" alt="" /></a>
+					<a data-fancybox="ideas"
+					   data-caption="Original version with unsorted list of suggestions"
+					   href="img/isoprofiler/dataset_view_4.png">
+						<img class="gallery1" src="img/isoprofiler/dataset_view_4.png"/>
+					</a>
 				</div>
 
 				<h3>ISOFORMS VIEW</h3>
@@ -186,7 +188,11 @@
 				</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/isoforms_view_no_margins.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/isoforms_view_no_margins.png" alt="" /></a>
+					<a data-fancybox="ideas"
+					   data-caption="Original version with unsorted list of suggestions"
+					   href="img/isoprofiler/isoforms_view_no_margins.png">
+						<img class="gallery1" src="img/isoprofiler/isoforms_view_no_margins.png"/>
+					</a>
 				</div>
 
 
@@ -207,12 +213,24 @@
 				 criteria across multiple properties and to have the filters always visible.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%205.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%205.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%206.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%206.png" alt="" /></a>
+					<a data-fancybox="filters" class="needsBorder"
+					   data-caption="Original version with unsorted list of suggestions"
+					   href="img/isoprofiler/A4%204x8%20grid%205.png">
+						<img class="gallery2 left_image with_border" src="img/isoprofiler/A4%204x8%20grid%205.png"/>
+					</a>
+					<a data-fancybox="filters" class="needsBorder"
+					   data-caption="Original version with unsorted list of suggestions"
+					   href="img/isoprofiler/A4%204x8%20grid%206.png">
+						<img class="gallery2 right_image with_border" src="img/isoprofiler/A4%204x8%20grid%206.png"/>
+					</a>
 				</div>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/filters.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/filters.png" alt="" /></a>
+					<a data-fancybox="filters"
+					   data-caption="Original version with unsorted list of suggestions"
+					   href="img/isoprofiler/filters.png">
+						<img class="gallery1" src="img/isoprofiler/filters.png"/>
+					</a>
 				</div>
 
 				<h2>CONCLUSIONS</h2>
@@ -226,7 +244,11 @@
 				amounts of novel data that people don't yet know how to use.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/final_mockup.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/final_mockup.png" alt="" /></a>
+					<a data-fancybox="final"
+					   data-caption="Original version with unsorted list of suggestions"
+					   href="img/isoprofiler/final_mockup.png">
+						<img class="gallery1" src="img/isoprofiler/final_mockup.png"/>
+					</a>
 				</div>
 
 				<p>User testing was done mostly on the artistic mockups and it involved presenting multiple scenarios to
