--- a/multi_color_overlay.html
+++ b/multi_color_overlay.html
@@ -18,24 +18,13 @@
 		<!-- Add jQuery library -->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 
-		<!-- Add mousewheel plugin (this is optional) -->
-		<script type="text/javascript" src="fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
-
-		<!-- Add fancyBox -->
-		<link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
-		<script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
-
-		<!-- Optionally add helpers - button, thumbnail and/or media -->
-		<link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
-		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
-		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
-
-		<link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
-		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.js"></script>
 
 		<link rel="stylesheet" href="style/fancybox_styling.css"/>
 
-        <script type="text/javascript" src="js/menu_utils.js"></script>
+		<script type="text/javascript" src="js/global.js"></script>
+		<script type="text/javascript" src="js/menu_utils.js"></script>
 
 		<!-- Hotjar Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
 		<script>
@@ -65,28 +54,11 @@
         </script>
 
 		<script type="text/javascript">
-			$(document).ready(function() {
-				console.log( "ready!" );
-				$(".fancybox").fancybox({
-					helpers : {
-						title: {
-							type: 'outside',
-							position: 'bottom'
-						},
-						overlay : {
-							css : {
-								'background' : 'rgba(70, 70, 70, 0.90)'
-							}
-						}
-					},
-					nextEffect: 'fade',
-					prevEffect: 'fade',
-					padding : 0,
-					margin : [20, 60, 20, 60] // Increase left/right margin
-				});
-			});
+            $(document).ready(function() {
+                //apply fancybox options
+                $("[data-fancybox]").fancybox(fancyboxOptions);
 
-            $(document).ready(function () {
+                //init navigation framework
                 $("#top_menu").load("top_menu.html", initTopMenuActions);
                 $("#side_menu").load("side_menu.html");
             });
@@ -112,7 +84,11 @@
 					the context around the new feature, who needs it and why.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original mockup, the starting point" href="img/network_overlay/1.original_proposal.png"><img class="gallery1" id="network_overlay_1" src="img/network_overlay/1.original_proposal.png" alt="" /></a>
+					<a data-fancybox="original"
+					   data-caption="Original mockup, the starting point"
+					   href="img/network_overlay/1.original_proposal.png">
+						<img class="gallery1" src="img/network_overlay/1.original_proposal.png"/>
+					</a>
 				</div>
 
 				<p>The problem came down to helping users find interesting patterns in their complex data coming from
@@ -138,8 +114,16 @@
 					alone was not enough.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Network overlay ideas" href="img/network_overlay/A4%204x8%20grid%201.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/network_overlay/A4%204x8%20grid%201.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Ideas for other components of the design" href="img/network_overlay/A4%204x8%20grid%202.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/network_overlay/A4%204x8%20grid%202.png" alt="" /></a>
+					<a data-fancybox="ideas" class="needsBorder"
+					   data-caption="Network overlay ideas"
+					   href="img/network_overlay/A4%204x8%20grid%201.png">
+						<img class="gallery2 left_image with_border" src="img/network_overlay/A4%204x8%20grid%201.png"/>
+					</a>
+					<a data-fancybox="ideas" class="needsBorder"
+					   data-caption="Ideas for other components of the design"
+					   href="img/network_overlay/A4%204x8%20grid%202.png">
+						<img class="gallery2 right_image with_border" src="img/network_overlay/A4%204x8%20grid%202.png"/>
+					</a>
 				</div>
 
                 <p>Starting from the original mock-up, I played with a lot of ideas on how to represent multiple dimensions
@@ -147,7 +131,11 @@
 					after combining different visualization types with color ranges, data points and labels.</p>
 
 				<div class="gallery">
-				<a class="fancybox" rel="group" title="Node level visualizations" href="img/network_overlay/2.ideation_collage.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/2.ideation_collage_4_no_margins.png" alt="" /></a>
+				<a data-fancybox="ideas"
+				   data-caption="Node level visualizations"
+				   href="img/network_overlay/2.ideation_collage.png">
+					<img class="gallery1" src="img/network_overlay/2.ideation_collage_4_no_margins.png"/>
+				</a>
 				</div>
 
                 <p>We threw away a lot of ideas, but some of them survived and were tested in the context of a network
@@ -157,11 +145,29 @@
 					test either, although the last one needed more simplification since it was very heavy on the eye.</p>
 
                 <div class="gallery">
-				    <a class="fancybox" rel="group" title="Integration test with bar charts" href="img/network_overlay/3.integration_test_bars.png"><img class="gallery2 left_image" id="network_overlay_3" src="img/network_overlay/3.integration_test_bars.png" alt="" /></a>
-				    <a class="fancybox" rel="group" title="Integration test with bar sunbursts" href="img/network_overlay/4.integration_test_sunburst.png"><img class="gallery2 right_image" id="network_overlay_4" src="img/network_overlay/4.integration_test_sunburst.png" alt="" /></a>
+				    <a data-fancybox="ideas"
+					   data-caption="Integration test with bar charts"
+					   href="img/network_overlay/3.integration_test_bars.png">
+						<img class="gallery2 left_image" src="img/network_overlay/3.integration_test_bars.png"/>
+					</a>
+				    <a data-fancybox="ideas"
+					   data-caption="Integration test with bar sunbursts"
+					   href="img/network_overlay/4.integration_test_sunburst.png">
+						<img class="gallery2 right_image" src="img/network_overlay/4.integration_test_sunburst.png"/>
+					</a>
+
 					<span class="gallery_separator"></span>
-					<a class="fancybox" rel="group" title="Integration test with parallel coordinates charts" href="img/network_overlay/5.integration_test_worms.png"><img class="gallery2 left_image" id="network_overlay_5" src="img/network_overlay/5.integration_test_worms.png" alt="" /></a>
-				    <a class="fancybox" rel="group" title="Simplified version of the parallel coordinates charts" href="img/network_overlay/6.integration_test_worms_simplified.png"><img class="gallery2 right_image" id="network_overlay_6" src="img/network_overlay/6.integration_test_worms_simplified.png" alt="" /></a>
+
+					<a data-fancybox="ideas"
+					   data-caption="Integration test with parallel coordinates charts"
+					   href="img/network_overlay/5.integration_test_worms.png">
+						<img class="gallery2 left_image" src="img/network_overlay/5.integration_test_worms.png"/>
+					</a>
+				    <a data-fancybox="ideas"
+					   data-caption="Simplified version of the parallel coordinates charts"
+					   href="img/network_overlay/6.integration_test_worms_simplified.png">
+						<img class="gallery2 right_image" src="img/network_overlay/6.integration_test_worms_simplified.png"/>
+					</a>
 				</div>
 
                 <p>The last piece of the puzzle was the exported image design, since the ultimate goal of the users was
@@ -170,8 +176,16 @@
 					emphasized on the network.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="Exported image for a single observation with multiple measurements" href="img/network_overlay/7.export_1.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/network_overlay/7.export_1.png" alt="" /></a>
-                    <a class="fancybox" rel="group" title="Exported image for multiple observations with a single measurement" href="img/network_overlay/7.export_2.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/network_overlay/7.export_2.png" alt="" /></a>
+                    <a data-fancybox="ideas" class="needsBorder"
+					   data-caption="Exported image for a single observation with multiple measurements"
+					   href="img/network_overlay/7.export_1.png">
+						<img class="gallery2 left_image with_border" src="img/network_overlay/7.export_1.png"/>
+					</a>
+                    <a data-fancybox="ideas" class="needsBorder"
+					   data-caption="Exported image for multiple observations with a single measurement"
+					   href="img/network_overlay/7.export_2.png">
+						<img class="gallery2 right_image with_border" src="img/network_overlay/7.export_2.png"/>
+					</a>
                 </div>
 
 				<h2>MOVING AWAY FROM THE NETWORK</h2>
@@ -184,7 +198,11 @@
 					the molecules measured during the experiments.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="Molecules table variations" href="img/network_overlay/8.table_sparkline_variations.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/8.table_sparkline_variations.png" alt="" /></a>
+                    <a data-fancybox="side"
+					   data-caption="Molecules table variations"
+					   href="img/network_overlay/8.table_sparkline_variations.png">
+						<img class="gallery1" src="img/network_overlay/8.table_sparkline_variations.png"/>
+					</a>
                 </div>
 
 				<p>One of the most frequent issues with data analysis is the amount of data. We were expecting datasets
@@ -192,7 +210,11 @@
 					some automatically discovered patterns of interest. That was done by way of smart filtering.</p>
 
 				<div class="gallery">
-                    <a class="fancybox" rel="group" title="Molecules table filtering" href="img/network_overlay/10.molecules_table_filters.png"><img class="gallery1center" id="network_overlay_2" src="img/network_overlay/10.molecules_table_filters.png" alt="" /></a>
+                    <a data-fancybox="side"
+					   data-caption="Molecules table filtering"
+					   href="img/network_overlay/10.molecules_table_filters.png">
+						<img class="gallery1center" src="img/network_overlay/10.molecules_table_filters.png"/>
+					</a>
                 </div>
 
 				<p>The dataset picker had also an important role in the design because it allowed selection of multiple
@@ -201,7 +223,11 @@
 					Those operations affected the visualizations from the table and network.</p>
 
 				<div class="gallery">
-                    <a class="fancybox" rel="group" title="Dataset picker" href="img/network_overlay/9.dataset_picker.png"><img class="gallery1center" id="network_overlay_2" src="img/network_overlay/9.dataset_picker.png" alt="" /></a>
+                    <a data-fancybox="side"
+					   data-caption="Dataset picker"
+					   href="img/network_overlay/9.dataset_picker.png">
+						<img class="gallery1center" src="img/network_overlay/9.dataset_picker.png"/>
+					</a>
                 </div>
 
 				<h2>NETWORK OVERLAY</h2>
@@ -211,7 +237,11 @@
 				to allow publishing by simply exporting the view.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Overlaying charts on the network" href="img/network_overlay/11.chart.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/11.chart.png" alt="" /></a>
+					<a data-fancybox="overlay"
+					   data-caption="Overlaying charts on the network"
+					   href="img/network_overlay/11.chart.png">
+						<img class="gallery1" src="img/network_overlay/11.chart.png"/>
+					</a>
 				</div>
 
 				<p>The node charts came with some layout challenges since they needed to accommodate up to 20 bars. Since
@@ -231,7 +261,11 @@
                 <p>This is a screenshot of the version that was released and the immediate feedback was very positive.</p>
 
 				<div class="gallery">
-				<a class="fancybox" rel="group" title="The released version" href="img/network_overlay/10.released_version.png"><img class="gallery1" id="function_candidates_1" src="img/network_overlay/10.released_version.png" alt="" /></a>
+				<a data-fancybox="final"
+				   data-caption="The released version"
+				   href="img/network_overlay/10.released_version.png">
+					<img class="gallery1" src="img/network_overlay/10.released_version.png"/>
+				</a>
 				</div>
 
 				<p>Here are some quotes from the emails that followed, mostly from the sales and management team:</p>
